添加首页自适应

--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <title>陶博客</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!--[if lt IE 9]>
-      <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
     <!-- 引入手写的css -->
     <link href="css/tao_blog.css" rel="stylesheet">
@@ -474,16 +470,9 @@ function outer(){
         </div>
 
 
+        <!-- 右边目录 -->
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" id="catalogue_father">
           <div id="catalogue">
-            <!-- <p> 
-              For example, <code>&lt;section&gt;</code> should be wrapped as inline.
-              <pre>&lt;p&gt;Sample text here...helloworld..helloworld..helloworld..helloworld..helloworld..&lt;/p&gt;</pre>
-              To switch directories, type <kbd>cd</kbd> followed by the name of the directory.<br>
-              To edit settings, press <kbd><kbd>ctrl</kbd> + <kbd>,</kbd></kbd> <br>
-              <samp>This text is meant to be treated as sample output from a computer program.</samp><br>
-              <var>y</var> = <var>m</var><var>x</var> + <var>b</var>
-            </p> -->
           </div>
         </div>
         
