添加第一篇文章

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- 引入手写的css -->
     <link href="css/tao_blog.css" rel="stylesheet">
+    <!-- highlight.js样式(备用)
+    <link href="css/highlight/default.css" rel="stylesheet">
+    -->
 
   </head>
   <body>
@@ -126,6 +129,9 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/handlebars.js"></script>
     <script src="js/showdown.min.js"></script>
+    <!--
+    <script src="js/highlight.pack.js"></script>
+    -->
 
     <script src="js/tao_blog.js"></script>
   </body>
