--- a/index.html
+++ b/index.html
@@ -2,18 +2,14 @@
 <html lang="zh-cn">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>陶博客</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!--[if lt IE 9]>
-      <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
     <!-- 引入手写的css -->
     <link href="css/tao_blog.css" rel="stylesheet">
+    <!-- highlight.js样式(备用)
+    <link href="css/highlight/default.css" rel="stylesheet">
+    -->
 
   </head>
   <body>
@@ -88,409 +84,55 @@
       <div class="row" id="main_div">
         <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9" id="articles">
 
-          <div class="row" id="article4">
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3  tag">
-              <div class="tag_content">
-                <img src="image/tag.jpg">
-                <h1>2015</h1>               
-                <h2>4-1</h2>
-              </div>
-            </div>
-            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
-              <h2 class="titles"><b>前端知识点笔记</b></h2>
-              <h4 class="article_label">标签：
-                <span>前端</span>
-                <span>笔记</span>
-              </h4>
-              <p class="body_text">
-<b>js十进制转二进制/字符串转数字</b>
-  parseInt(数, 进制)    var i=parseInt(100,2);
-
-<b>前端页面有哪三层构成?</b>
-网页的结构层（structural layer）由 HTML 或 XHTML 之类的标记语言负责创建。标签，也就是那些出现在尖括号里的单词，对网页内容的语义含义做出了描述，但这些标签不包含任何关于如何显示有关内容的信息。例如，P 标签表达了这样一种语义：“这是一个文本段。”
-网页的表示层（presentation layer） 由 CSS 负责创建。 CSS 对“如何显示有关内容”的问题做出了回答。
-网页的行为层（behavior layer）负责回答“内容应该如何对事件做出反应”这一问题。这是 Javascript 语言和 DOM 主宰的领域。
-
-<b>jquery的$.extend和$.fn.extend作用及区别</b>
-  前者是用于添加jquery的类方法（静态），只能直接调用，如$.ajax，实例对象不能调用。
-  后者是添加jquery的成员函数，是给具体的对象调用的。
-
-<b>csrf（跨站请求伪造）与xss（跨站脚本注入）网站攻击</b>
-  csrf:黑客诱使用户点进黑客网站的链接，然后利用用户用户的cookie信息，在用户不知情的情况下，向服务器发起类似转账等请求。
-  防御：使用浏览器的referer，判断请求来源的url。在请求中加入token验证。
-  XSS:在用户页面（如评论）注入JavaScript脚本，如搜集发送用户的cookie的信息，死循环弹窗等。
-  防御：Ajax中禁止跨域（url不是服务器url）请求，过滤和转义用户输入的文本。
-float：left与display:inline的用法区别
-
-<b>垂直对齐的实现方式：</b>
-1.  display:table-cell
-vertical-align:middle
-
-  2．在需要对齐的元素后，加入一个空的span，设置它的height为100%，width为0.1px。然后分别在空span与需对齐的元素中，加入vertical-align: middle属性。目的是让行内元素的基线，相对于该元素所在行的基线垂直对齐。
-
-<b>Jquery  trigger事件：触发所选元素绑定的事件</b>
-
-<b>事件捕获与事件冒泡</b>
-
-<b>CSS  BFC（Block formatting context）：</b>
-  作用：
-1.  自适应两栏布局（多栏）
-2.  清除内部浮动（了解另一种方法，通过clear实现方式！！）
-3.  防止垂直margin重叠
-
-<b>获取整个页面代码/内容</b>
-var html =document.getElementsByTagName('html')[0]. innerHTML;    
-var text1=document.getElementsByTagName('html')[0].textContent;  
-var text2=document.getElementsByTagName('html')[0]. innerText;  
-
-<b>js  on事件中的event对象（事件句柄）及可用属性：</b>
-  &lt; script type="text/javascript">
-  $(document).ready(function(){
-    $(document).mousemove(function(e){
-      $("span").text(e.pageX + ", " + e.pageY);
-    });
-  });
-  &lt; /script>
-&lt; p>鼠标位于坐标： &lt; span>&lt; /span>.&lt; /p>
-
-<b>Js prototype属性用法</b>
-function Employee(name, salary){
-  this.name=name;               
-  this.salary=salary;
-}
-Employee.prototype.getSalary=function getSalaryFunction(){
-  return this.salary;
-}
-Employee.prototype.addSalary=function addSalaryFunction(addition){
-  this.salary=this.salary+addition;
-}
-
-Prototype可以为js中类的对象，添加属性和方法（为一个特定类声明通用的变量或者函数）。因为对象中有一个内部属性__proto__，每次调用对象的prototype方法/属性时，会从这个内部属性找到。Prototype还可以用作克隆另外一个类的方法属性（继承？？？？？？），如：
-Function baseClass{
-  /*  xxxxxxxx*/
-}
-Function extendClass{}
-
-extendClass.prototype = new baseClass();
-若extend类有与base类同名的方法，将会取代。
-
-<b>console.log()方法（window.console.log() ）</b>
-  window对象中会注册一个名为console的成员变量, 可用于在控制台打印出变量/对象… 
-  与alert相比，它不会打断程序的执行，在调试的时候更值得推荐。同时能类似C语言传参数：console.log("%s is %d years old.", people, years);
-其它日志级别：
-console.log("Log level");
-console.debug("Debug level");
-console.info("Info level");
-console.warn("Warn level");
-console.error("Error level");
-
-<b>js确认提示框：</b>
-&lt; button id="confirm">confirm&lt; /button>
-$('#confirm').click(function(event){
-    var _confirm = confirm("跳转页面？");
-    if (_confirm == true){
-        event.returnValue = true;   //return true;
-        window.location.href="../blog/blog.html"; 
-      }
-      else{
-        event.returnValue = false;    //return false;
-      }
-  });
-
-<b>Jsonp跨域请求（另一种方式：XMLHttpRequest  level 2）</b>
-&lt; scipt>标签的src属性是跨域的，在url后加入参数，包括回调函数的名字。服务端动态生成js文件，里面包含一个对回调函数的实例调用。如：
-客户端：
-&lt; script type="text/javascript">
-        function onCustomerLoaded(result, methodName) {
-            var html = '&lt; ul>';
-            for (var i = 0; i &lt;  result.length; i++) {
-                html += '&lt; li>' + result[i] + '&lt; /li>';
-            }
-            html += '&lt; /ul>';
-            document.getElementById('divCustomers').innerHTML = html;
-        }
-    &lt; /script>
-&lt; script type="text/javascript" src="http://www.yiwuku.com/myService.aspx?jsonp=onCustomerLoaded">&lt; /script>
-服务端：
-jsonpcallback({"Email":"zhww@outlook.com","Remark":"我来自遥远的东方"})
-//函数的参数引入一个json对象
-
-<b>Js闭包</b>
-function a(){
-      var i=0;
-      function b(){
-        alert(++i);
-      }
-      return b;
-    }
-    var c = a();
-    c();  //1
-    c();  //2
-闭包的作用就是在a执行完并返回后，闭包使得Javascript的垃圾回收机制GC不会收回a所占用的资源，因为a的内部函数b的执行需要依赖a中的变量。所以每次调用C()，i都会递增上去。
-闭包作用：
-  1、保护函数内的变量安全。以最开始的例子为例，函数a中i只有函数b才能访问，而无法通过其他途径访问到，因此保护了i的安全性。
-  2、在内存中维持一个变量。依然如前例，由于闭包，函数a中i的一直存在于内存中，因此每次执行c()，都会给i自加1。
-
-<b>Js回调函数</b>
-function a(callback) 
-{    
-      alert("我是parent函数a！"); 
-      alert("调用回调函数"); 
-      callback(); 
-} 
-function b(){ 
-alert("我是回调函数b"); 
-} 
-function c(){ 
-alert("我是回调函数c"); 
-} 
-function test() 
-{ 
-      a(b); 
-    a(c); 
-}
-
-<b>Js深复制对象</b>
-        (function () {
-            //深复制对象方法
-            var cloneObj = function (obj) {
-                var newO = {};
-                if (obj instanceof Array) {
-                    newO = [];
-                }
-                for (var key in obj) {
-                    var val = obj[key];
-                    newO[key] = typeof val === 'object' ? arguments.callee(val) : val;
-                }
-                return newO;
-            };
-            //测试
-            var a = {a:{a:123}},
-                    b = cloneObj(a);
-            b.a.a = 456;
-            alert(a.a.a);
-        })();
-
-  I,  数组的深复制可以直接用slice与concat方法
-  II, js arguments.callee 和 caller的用法及区别
-在函数内部，arguments.callee该属性是一个指针，指向拥有这个arguments对象的函数;
-而函数对象的另一个属性：caller，这个属性保存着调用当前函数的函数的引用，如果是在全局作用域中调用当前函数，它的值为null。
-function inner(){
-  alert(arguments.callee);//指向拥有这个arguments对象的函数，即inner()
-  alert(arguments.callee.caller);//这个属性保存着调用当前函数的函数的引用,即outer()
-}
-function outer(){
-  inner();
-}
-              </p>
-            </div>
-          </div>          
-
-          <!-- 文章之间分割线 -->
-          <hr class="divided_line"> 
-
-          <div class="row" id="article3">
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3  tag">
-              <div class="tag_content">
-                <img src="image/tag.jpg">
-                <h1>2015</h1>               
-                <h2>3-25</h2>
-              </div>
-            </div>
-            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
-              <h2 class="titles"><b>有用该记住的jquery用法</b></h2>
-              <h4 class="article_label">
-                标签：
-                <span>jQuery</span>
-                <span>javascript</span>
-              </h4>
-              <p class="body_text">
-    1.  var selector = $(this).children("a");  
-    2.  tID = setTimeout( function() {xxx} ，100)；clearTimeout(tId);   //mouseenter时延迟100ms执行；mouseleave时清除延时，且调用stop方法，清空动画队列
-    3.  $(this).children("a").stop().animate({"top":"-60px"} , "easeInOutCubic");   //动画函数animate
-    4.    $('html, body').animate({"scrollTop" : “200px”}, "linear");
-    5.    手动制作向右淡入与淡出的效果：
-    $('#top_panel .downward').fadeOut(100 , function(){     
-          $('#top_panel .panel_content')
-          .css({"display":"none" , "margin-left":"-10%"})
-          //fadein顺序相反会出bug！！！！！！！！！！！！！！！！！！
-          .fadeIn(700)
-          .queue("fade_in", function(next){
-            $(this).animate({"margin-left" : "0%"} ,  {"duration": 400 , "queue": false});
-            next();
-          })
-          .dequeue("fade_in");
-
-    6.选择第n个子元素：
-        $(“#div1”).eq(n).addClass(“blue”);  //注意，eq(n)是从第0个开始的
-         $(“div:eq(1)”).addClass(“blue”); //若eq(index)的index为负数，则从后开始
-        $(“body”).find(“div”).eq(n).addClass(“blue”);  // find找出所有后代元素
-          $('#div1').children('span').length;   //children找出所有子元素，注意区别
-    //length返回选择器选择的个数
-
-    /*先把它定位到屏幕左侧，然后fadeIn 的效果同时，额外加入一个自定义队列，来做向右滑动的animate效果。注意，由于两个效果需要并行同时执行，所以在自定义队列的animate中，"queue": false   让其不加入默认的fx动画队列。*/
-    7.用jquery动态生成的html，不能直接用click事件绑定，需要用on事件绑定
-
-    $('#top_panel .panel_content')
-        .queue("go_right", function(next){
-            $(this).animate({"margin-left" : "50%"} ,  {"duration": 800 , "queue": false});
-            next();
-          })
-        .dequeue("go_right")
-        .fadeOut(600 , function(){
-          $('#top_panel .downward').fadeIn(150);
-        });   
-      
-    /*向右淡出效果，思路同上。注意淡出时先animate后fadeOut，淡入时先fadeIn后animate。反过来可能会出bug！！*/
-
-    8.若想刷新后返回页面顶部，可用
-    window.onbeforeunload = function(){
-      $(window).scrollTop('0');
-    }
-              </p>
-            </div>
-          </div>
-
-          <!-- 文章之间分割线 -->
-          <hr class="divided_line"> 
-
-          <div class="row" id="article2">
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3  tag">
-              <div class="tag_content">
-                <img src="image/tag.jpg">
-                <h1>2015</h1>               
-                <h2>3-24</h2>
-              </div>
-            </div>
-            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
-              <h2 class="titles"><b>有用该记住的css用法</b></h2>
-              <h4 class="article_label">标签：
-                <span>css</span>
-                <span>css3</span>
-                <span>属性</span>
-              </h4>
-              <p class="body_text">
-    1.  -webkit-box-shadow: 3px 3px 18px #888484;  //阴影
-    2.  -moz-border-radius: 100px;  //圆角或圆形实现
-    3.  -o-linear-gradient(left, #CDD0EF, #EBEAF5, #CDD0EF);  //渐变颜色
-    4.  text-decoration: none;   //不要下划线
-    5.  letter-spacing: 9px;     //字间距设置
-    6.  transition:background-color 1s ease-in-out;   //动画平缓变化
-    7.  font: lighter 2em/85px "Helvetica Neue", "Arial", "Helvetica", "sans-serif";//可调节字体距顶部的高度
-    8.  .button2 a:first-child    .button2 a:nth-of-type(2)   //子元素选择
-    9.  .button2:hover  //做动画
-    10.  animation:mymove 5s infinite;  //infinite是不断重复执行
-    @keyframes mymove
-    {
-    from {left:0px;}  
-    to {left:200px;}
-    // 0%{-moz-transform:rotate(0deg)}   //transform还可以做scale放大
-    // 100%{-moz-transform:rotate(360deg)}
-    }
-    10.  x=$("p").offset();  $("#span1").text(x.left/top);  //距离顶部高度
-    11.  glyphicon图标，属于font，可以调节字体大小或颜色
-    12.  transform-origin: 1px 1px;   //变化原点，不大懂
-    animation: hrhand 8s linear infinite (alternate);  //动画，infinite无限重复
-    @-webkit-keyframes hrhand{
-    0%{-webkit-transform:rotate(0deg)}
-    100%{-webkit-transform:rotate(360deg)}
-    }  //有时不到100%，有特别的收回效果，不懂
-    //alternate：交替起点终点效果
-
-    13. cursor属性，定义指针经过时光标形状。
-    14.在调节top_bar三个按钮位置时，曾尝试多种方式，都无法做到具有响应式的居中。后来在三个按钮的span标签外，外套一层div，设置div的margin：0 auto ，同时设定div宽度固定为3*300+200px （按钮宽度100px，间距100px）。然后再利用span的，position:relative 和left属性调节相对边距，从而达到响应式居中。
-    15. white-space属性：
-    有nowrap, pre, pre-wrap, pre-line这几个可选属性值。其中在文章正文内容中，空格符需要保留，换行符需要保留，自动运行允许，这时我们就需要使用pre-wrap属性值。
-              </p>
-            </div>
-          </div>
-
-          <!-- 文章之间分割线 -->
-          <hr class="divided_line"> 
-
-          <div class="row" id="article1">
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3  tag">
-              <div class="tag_content">
-                <img src="image/tag.jpg">
-                <h1>2015</h1>               
-                <h2>3-23</h2>
-              </div>
-            </div>
-            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
-              <h2 class="titles"><b>开发本博客时一些效果的实现方法与思路</b></h2>
-              <h4 class="article_label">
-                标签：
-                <span>blog</span>
-                <span>ideas</span>
-                <span>methods</span>
-              </h4>
-              <p class="body_text">
-    <b>1.  在同一行中想排多个元素时，有几种方法：</b>
-    i，  用float:left ，多个排列
-    ii， 用span标签，设置padding和margin值
-    iii，  用Bootstrap的布局系统
-
-    <b>2.  实现顶部图片（固定效果）：</b>
-    I，  在top_pic的子元素中，加入position：fixed。如果想要居中，同时设置left:0和right:0
-    II， Z-index要设置较小值
-    III，  字体大小: font: lighter 92px "KaiTi" , "FangSong" , "黑体" , "Microsoft YaHei" , "宋体" ,sans-serif;
-    IV， 用background_image无法实现图片百分百平铺+响应式，选择在div中加入img标签
-
-    <b>3.  实现导航栏中三个动态按钮：</b>
-    I，  设置一个固定长高的div，并设置边角圆形
-    II， 加入两个a标签，设置height与父div高度相同
-    III，  加入display：block  , 会加入换行符
-    IV， Position:relative ,然后在CSS的hover事件，或者jQuery的mouseenter/mousehover + mouserleave事件中，用animate改变top值()
-
-    <b>4.  实现导航栏滚动到顶部时，固定</b>
-    I，  getheight函数求出top_pic的height值global_pic_height，然后jquery赋值给top_bar的height（用到substr去除字符串的“px”）
-    II， 赋值给图片上文字top_pic h1/h2的height属性
-    III，  $(document).ready( get_height() )；加载页面时触发。
-    IV， $(window).resize(function() {  get_height();  });改变窗口大小或缩放时触发，动态调节top_bar的高度。
-    V 用scroll事件，求scrollTop值，与top_pic的height比较
-    VI， 改变top_bar 的position为fixed。由于top_bar变为fixed后不占据高度，为了让下边div元素的位置不移动，在top_bar外加上一层父div（top_bar_father），并让父div的height固定（这里是60px），从而不影响下方元素
-
-    <b>5.  实现窗口右侧目录</b>
-    I，  jquery选取$(‘titles’).length，获取正文文章数，并用eq(n)与text()方法取得题目文本，存在全局数组。
-    II， 取得每个题目的offset().top()，存在全局数组，用于后边的锚点定位。
-    III，  判定每个标题长度。首先用charCodeAt(j)区分中文与英文字符，若值为[0 , 128]，为英文。中文字符计算2长度，英文计1。若总长度超过一定值，截去后部分字符串，并加上“…”
-    IV， append方法动态插入目录，每一个加上id，并在最后加上“返回顶部”
-    V，  $(document).on(“click” , “#catalogue h3,h4” , function(){ })，绑定目录的“click”（因为目录为动态生成，不能直接用click事件）。根据current_id = $(this).attr(“id”)，取得对应的标题高度title_height[current_id]
-    VI， $('html , body').animate({"scrollTop" : title_height[current_id] + 'px'} ,  {"duration":600 ,"time-function":"linear" , "queue": false}) 滑动到达指定高度。
-    VII，  与top_bar绑定相同的scroll事件，切换position的fixed与relative属性值。在resize事件中，为了让目录在fixed状态下，也能相对窗口大小调整坐标，考虑在他们外加上一层父div，并利用父div计算相对距离。
-    var new_top = parseInt( $('#catalogue').parent().offset().top)
-        - parseInt( $('#top_bar_father').offset().top );
-    var new_left = parseInt( $('#catalogue').parent().offset().left) ;
-        $('#catalogue').css({"position":"fixed","top":new_top+'px', "left":new_left+'px'});
-    VIII， 使用：hover：after事件，在css content中添加尖嘴指示符号
-    IX， scroll事件中，用当前的top_dis = $(this).scrollTop()，与各个title_height做对比，实现滑动到对应目录条内容时,在其前面添加星号标记。提前在标题上方150px的高度，就添加星号。当top_dis在两个title_height之间时，$('.active_catalogue').remove();  
-    $('#catalogue' + (i-1) ) .prepend('&lt; span class="active_catalogue glyphicon glyphicon-star">&lt;/span>');
-    record[i] = 1; record[i-1] = 0; record[i+1] = 0;
-    其中record是用来记录，当前高度属于哪篇文章。
-              </p>
-            </div>
-          </div>
-
         </div>
 
-
+        <!-- 右边目录 -->
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" id="catalogue_father">
           <div id="catalogue">
-            <!-- <p> 
-              For example, <code>&lt;section&gt;</code> should be wrapped as inline.
-              <pre>&lt;p&gt;Sample text here...helloworld..helloworld..helloworld..helloworld..helloworld..&lt;/p&gt;</pre>
-              To switch directories, type <kbd>cd</kbd> followed by the name of the directory.<br>
-              To edit settings, press <kbd><kbd>ctrl</kbd> + <kbd>,</kbd></kbd> <br>
-              <samp>This text is meant to be treated as sample output from a computer program.</samp><br>
-              <var>y</var> = <var>m</var><var>x</var> + <var>b</var>
-            </p> -->
           </div>
         </div>
         
       </div>
     </div>
 
+
+    <script id="article_template" type="text/x-handlebars-template">
+      {{#each this}}
+        <div class="row">
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3  tag">
+            <div class="tag_content">
+              <img src="image/tag.jpg">
+              <h1>{{year}}</h1>               
+              <h2>{{month-date}}</h2>
+            </div>
+          </div>
+          <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
+            <h2 class="titles"><b>{{title}}</b></h2>
+            <h4 class="article_label">
+              标签：
+              {{#each tags}}
+                <span>{{this}}</span>
+              {{/each}}
+            </h4>
+            <p class="body_text" data-article={{article-text}}>
+            这里是文章3
+            </p>
+          </div>
+        </div>
+
+        <!-- 文章之间分割线 -->
+        <hr class="divided_line"> 
+      {{/each}}
+
+
+    </script>
     <script src="js/jquery.min.js"></script>
+    <script src="js/handlebars.js"></script>
+    <script src="js/showdown.min.js"></script>
+    <!--
+    <script src="js/highlight.pack.js"></script>
+    -->
+
     <script src="js/tao_blog.js"></script>
   </body>
 </html>
