--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- 引入手写的css -->
     <link href="css/tao_blog.css" rel="stylesheet">
-    <!-- highlight.js样式(备用)
-    <link href="css/highlight/default.css" rel="stylesheet">
+    <!-- highlight.js样式(选用)
+      <link href="css/highlight/default.css" rel="stylesheet">
     -->
 
   </head>
