--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- 引入手写的css -->
     <link href="css/tao_blog.css" rel="stylesheet">
-    <!-- highlight.js样式(选用)
-      <link href="css/highlight/default.css" rel="stylesheet">
-    -->
+    <!-- highlight.js样式(非必须) -->
+    <link href="css/highlight/hybrid.css" rel="stylesheet">
 
   </head>
   <body>
@@ -129,10 +128,9 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/handlebars.js"></script>
     <script src="js/showdown.min.js"></script>
-    <!--
+    <!-- 引入highlight.pack.js(非必须) -->
     <script src="js/highlight.pack.js"></script>
-    -->
 
-    <script src="js/tao_blog.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
