--- a/author.html
+++ b/author.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
   <head>
     <meta charset="utf-8">
     <title>陶博客 - 作者</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/author.css" rel="stylesheet">
     <link href="css/top_bar.css" rel="stylesheet">
   </head>
 <body>
+  <div id="top_bar_father">
 	<div id="top_bar">
 	  <!-- .adjust用于调整三个按钮位置居中 -->
 	  <div class="adjust">
@@ -43,5 +45,18 @@
 	    </span>
 	  </div>
 	</div>
+  </div>
+
+  <div id="main_body">
+  	<div id="center">
+  	  <div class="top">
+  	  	<img src="image/resume.jpg">
+  	  	<h1>陆瀚陶</h1>
+  	  	<h4>电话: 13249312957</h4>
+  	  	<h4>邮箱: littletaotaotao@foxmail.com</h4>
+  	  	<h4>住址: 广州大学城中山大学东校区至善园二号604房</h4>
+  	  </div>
+  	</div>	
+  </div>
 </body>
 </html>
