完成作者页开发

--- a/author.html
+++ b/author.html
@@ -56,6 +56,74 @@
   	  	<h4>邮箱: littletaotaotao@foxmail.com</h4>
   	  	<h4>住址: 广州大学城中山大学东校区至善园二号604房</h4>
   	  </div>
+  	  <div class="title">
+  	  	<div>目标方向</div>
+  	  </div>
+  	  <h4>Web前端工程师</h4>	
+
+  	  <div class="title">
+  	  	<div>教育背景</div>
+  	  </div>
+  	  <h4>2012.09 – 2016.07 本科 中山大学 计算机科学与技术（网络工程）</h4>	
+
+  	  <div class="title longlong">
+  	  	<div>项目及实践经验</div>
+  	  </div>
+	  <h3 class="subTitle">UC优视实习</h3>
+	  <p class="project_text"><b>-- </b> 从2015年4月15日至6月28日，在UC优视实习，参与国外视频网站的爬取项目。<br>
+	  <b>-- </b>项目基于<code>node.js</code>开发。目标是根据给出的视频网站入口<code>url</code>，最终整个网站上的所有视频，每个视频对应信息（如标题、描述、时长、评分…）都爬取下来，并分类存入数据库。<br>
+	  <b>-- </b>我参与的部分，是对有不同加载数据方式的网站（如普通<code>html</code>静态页/通过<code>api</code>，<code>ajax</code>加载/<code>script</code>标签中包含数据），开发出他们的对应解析。
+	  </p>
+
+	  <h3 class="subTitle">个人项目：爬虫框架</h3>
+	  <p class="project_text"><b>-- </b>结合在UC实习时的所学，基于<code>nodejs</code>，单独开发了一个简易的爬虫框架。<br>
+	  <b>-- </b>框架不仅局限于视频网站的爬取，当加入了对应网站的解析后，框架还能够爬取如微博、博客的网站。<br>
+	  <b>-- </b>框架支持多进程（<code>cluster</code>模块），可同时对多个主入口任务爬取。而对于每个进程中的多个子<code>url</code>，基于<code>node</code>的事件流，可以同时用多个<code>worker</code>进行异步地爬取。<br>
+	  <b>-- Github仓库：</b><a href="https://github.com/luhantao/node-web-scraper/">https://github.com/luhantao/node-web-scraper/</a>
+	  </p>
+
+	  <h3 class="subTitle">外包项目：美术圈</h3>
+	  <p class="project_text"><b>-- </b>这是一个面向美术生的问答平台。主要面向用户有学生，老师，画室三者。学生可以发表问题并上传自己作品图片；其他人可对问题点赞/评论，老师可以回答问题；画室可以发布自己的作品、师资等信息。<br>
+	  <b>-- </b>我与另一同学两人完成了网站的前端开发。网站使用了<code>RequireJS</code>，对功能模块化以及按需加载；使用了<code>Handlebars</code>模板引擎，对数据与表现进行分离。使用了<code>LESS</code>编写网页的<code>CSS</code>样式。
+	  </p>
+
+	  <h3 class="subTitle">课程项目：模拟在线电影购票网站</h3>
+	  <p class="project_text"><b>-- </b>这是在课程设计中，开发的一个简易模拟电影院网上售票的网站。主要模块有用户系统与购票系统。<br>
+	  <b>-- </b>前端主要使用了<code>Bootstrap</code>框架；后端使用了<code>php</code>+<code>MySQL</code>。<br>
+	  <b>-- Github仓库：</b><a href="http://luhantao.sinaapp.com/">http://luhantao.sinaapp.com/</a>
+	  </p>
+
+  	  <div class="title">
+  	  	<div>个人账号</div>
+  	  </div>
+  	  <ul>
+  	  	<li>
+  	  		<span>Github账号：</span><a href="https://github.com/luhantao">https://github.com/luhantao</a>
+  	  	</li>
+  	  	<li>
+  	  		<span>个人博客：本网站 或 </span><a href="http://luhantaoblog.sinaapp.com/">http://luhantaoblog.sinaapp.com/</a>
+  	  	</li>
+  	  </ul>
+
+  	  <div class="title">
+  	  	<div>专业技能</div>
+  	  </div>
+  	  <ul>
+  	  	<li><code>Web</code>前端开发。熟悉<code>html</code>，<code>css</code>，<code>js</code>；能实现良好的页面效果；熟悉<code>jQuery</code>，<code>RequireJS</code>，<code>Hanlebars</code>，<code>LESS</code>；熟悉<code>React.js</code>的基本功能；熟悉<code>Ajax</code>+<code>json</code>与后台交互；了解<code>html5</code>新特性，前端性能优化。</li>
+  	  	<li><code>web</code>后端开发。熟悉<code>node.js</code>，懂得使用<code>MySQL</code>数据库。</li>
+  	  	<li><code>C++</code>、数据结构及算法。</li>
+  	  </ul>
+
+  	  <div class="title long">
+  	  	<div>获奖与验证</div>
+  	  </div>
+  	  <ul>
+  	  	<li>在2014年全国大学生数学建模大赛（MCM）中，获得三等奖。</li>
+  	  	<li>在2015年美国大学生数学建模竞赛中，获得成功参赛奖（Successful Participant）。</li>
+  	  	<li>大三学年获得校级奖学金三等奖。</li>
+  	  	<li>在CCF软件能力认证考试（<code>C/C++</code>）中，取得排名前13.04%的成绩。</li>
+  	  	<li>通过CET-6英语六级考试。</li>
+  	  </ul>
   	</div>	
   </div>
 </body>
