修改顶栏a的href

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <span>
               <div class="button2">
                 <div class="hover">
-                  <a href="javascript:void(0)">
+                  <a href="articles_catalogue.html">
                     <span class="glyphicon glyphicon-pencil icon_add" aria-hidden="true"></span>
                   </a> 
-                  <a href="javascript:void(0)">文章</a>
+                  <a href="articles_catalogue.html">文章</a>
                 </div>
               </div>  
             </span>
