demo文件中修改href为返回上一页

--- a/demos/article2/3.html
+++ b/demos/article2/3.html
@@ -9,7 +9,7 @@
   <body>
     <div id="component1"></div>
     <div id="component2"></div>
-    <a href="../../index.html">返回首页</a>
+    <a href="javascript:history.back()">返回上一页</a>
 
     <script type="text/jsx">
         var component1_node;
