--- a/demos/article2/1.html
+++ b/demos/article2/1.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="component"></div>
-    <a href="../../index.html">返回首页</a>
+    <a href="javascript:history.back()">返回上一页</a>
     <script type="text/jsx">
         var Father = React.createClass({
             getInitialState: function(){
