--- a/index.html
+++ b/index.html
@@ -131,13 +131,15 @@
       {{/each}}
     </script>
 
+    <script src="js/jquery.min.js"></script>
     <!-- 提前调高，尽可能减少屏幕抖动 -->
     <script type="text/javascript">
-      var pic_height = document.querySelector('#top_pic img').offsetHeight;
-      document.querySelector('#top_pic').style.height = pic_height + 'px';
+      $(document).ready(function(){
+        var pic_height = $('#top_pic img').css("height");
+        $('#top_pic').css({"height":pic_height});
+      });
     </script>
 
-    <script src="js/jquery.min.js"></script>
     <script src="js/handlebars.js"></script>
     <script src="js/showdown.min.js"></script>
     <!-- 引入highlight.pack.js(非必须) -->
